force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CoverageAmountRemaining__c.field-meta.xml
<CustomField>
    <fullName>cve__CoverageAmountRemaining__c</fullName>
    <label>Coverage Amount Remaining</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>