force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CriticalBurnMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__CriticalBurnMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__CriticalBurnAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__CriticalBurnPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__CriticalBurnAmountMaximum__c,  cve__Benefit__r.cve__CriticalBurnPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__CriticalBurnAmountMaximum__c),
        cve__Benefit__r.cve__CriticalBurnAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__CriticalBurnPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__CriticalBurnPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Critical Burn Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>