force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CurrentAccountValue__c.field-meta.xml
<CustomField>
    <fullName>cve__CurrentAccountValue__c</fullName>
    <label>Current Account Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>