force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateCareStarted__c.field-meta.xml
<CustomField>
    <fullName>cve__DateCareStarted__c</fullName>
    <label>Date Care Started</label>
    <type>Date</type>
</CustomField>