force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateOfAccident__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfAccident__c</fullName>
    <label>Date of Accident</label>
    <type>Date</type>
</CustomField>