force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateOfDeath__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfDeath__c</fullName>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>