force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateOfDiagnosis__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfDiagnosis__c</fullName>
    <label>Date of Diagnosis</label>
    <type>Date</type>
</CustomField>