force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateOfDisability__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfDisability__c</fullName>
    <label>Date of Disability</label>
    <type>Date</type>
</CustomField>