force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateOfLoss__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfLoss__c</fullName>
    <label>Date of Loss</label>
    <type>Date</type>
</CustomField>