force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateOfMaturity__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfMaturity__c</fullName>
    <label>Date of Maturity/Annuity</label>
    <type>Date</type>
</CustomField>