force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateOfWellnessService__c.field-meta.xml
<CustomField>
    <fullName>cve__DateOfWellnessService__c</fullName>
    <label>Date of Wellness Service</label>
    <type>Date</type>
</CustomField>