force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DateReceived__c.field-meta.xml
<CustomField>
    <fullName>cve__DateReceived__c</fullName>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>