force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DayCareMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__DayCareMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__DayCareAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__DayCarePercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__DayCareAmountMaximum__c,  cve__Benefit__r.cve__DayCarePercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__DayCareAmountMaximum__c),
        cve__Benefit__r.cve__DayCareAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__DayCarePercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__DayCarePercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Day Care Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>