force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DaysPending__c.field-meta.xml
<CustomField>
    <fullName>cve__DaysPending__c</fullName>
    <label>Days Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>