force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DaysTolling__c.field-meta.xml
<CustomField>
    <fullName>cve__DaysTolling__c</fullName>
    <label>Days Tolling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>