force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DeathNotification__c.field-meta.xml
<CustomField>
    <fullName>cve__DeathNotification__c</fullName>
    <label>Death Notification</label>
    <type>Date</type>
</CustomField>