force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DecisionTurnAroundDays__c.field-meta.xml
<CustomField>
    <fullName>cve__DecisionTurnAroundDays__c</fullName>
    <inlineHelpText>The sum of the Days Pending and Days Tolling fields. This field is only be populated once Benefit Claimed changes from a Pending status.</inlineHelpText>
    <label>Decision Turn Around Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>