force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DismembermentAndLoss__c.field-meta.xml
<CustomField>
    <fullName>cve__DismembermentAndLoss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dismemberment &amp; Loss</label>
    <type>Checkbox</type>
</CustomField>