force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__DoubleIndemnityCommonCarrierMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__DoubleIndemnityCommonCarrierMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__DoubleIndemnityCommonCarrierAmtMax__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__DoubleIndemnityCommonCarrierPctMax__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__DoubleIndemnityCommonCarrierAmtMax__c,  cve__Benefit__r.cve__DoubleIndemnityCommonCarrierPctMax__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__DoubleIndemnityCommonCarrierAmtMax__c),
        cve__Benefit__r.cve__DoubleIndemnityCommonCarrierAmtMax__c,
        IF (! ISNULL(cve__Benefit__r.cve__DoubleIndemnityCommonCarrierPctMax__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__DoubleIndemnityCommonCarrierPctMax__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Double Indemnity Common Carrier Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>