force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EffectiveDateOfCoverage__c.field-meta.xml
<CustomField>
    <fullName>cve__EffectiveDateOfCoverage__c</fullName>
    <label>Effective Date of Coverage</label>
    <type>Date</type>
</CustomField>