force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EitherHandOrFootAndSightInOneEye__c.field-meta.xml
<CustomField>
    <fullName>cve__EitherHandOrFootAndSightInOneEye__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Either Hand or Foot and Sight in One Eye</label>
    <type>Checkbox</type>
</CustomField>