force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EmployeeContributionPostTax__c.field-meta.xml
<CustomField>
    <fullName>cve__EmployeeContributionPostTax__c</fullName>
    <label>Employee Contribution (Post-Tax)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>