force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EmployeeContributionPreTax__c.field-meta.xml
<CustomField>
    <fullName>cve__EmployeeContributionPreTax__c</fullName>
    <label>Employee Contribution (Pre-Tax)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>