force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EmployeePremiumPaidPostTax__c.field-meta.xml
<CustomField>
    <fullName>cve__EmployeePremiumPaidPostTax__c</fullName>
    <label>Employee Premium Paid (Post-Tax)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>