force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EmployerContributionPostTax__c.field-meta.xml
<CustomField>
    <fullName>cve__EmployerContributionPostTax__c</fullName>
    <label>Employer Contribution (Post-Tax)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>