force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EmployerPremiumPaidPreTax__c.field-meta.xml
<CustomField>
    <fullName>cve__EmployerPremiumPaidPreTax__c</fullName>
    <label>Employer Premium Paid (Pre-Tax)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>