force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EstimatedDateOfDelivery__c.field-meta.xml
<CustomField>
    <fullName>cve__EstimatedDateOfDelivery__c</fullName>
    <label>Estimated Date of Delivery</label>
    <type>Date</type>
</CustomField>