force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__EventDate__c.field-meta.xml
<CustomField>
    <fullName>cve__EventDate__c</fullName>
    <formula>CASE(
RecordType.DeveloperName,
&apos;Accident&apos;, cve__DateOfAccident__c,
&apos;AccidentalDeathAndDismemberment&apos;, IF(cve__DismembermentAndLoss__c, cve__DateOfLoss__c, cve__DateOfDeath__c),
&apos;Annuity&apos;, cve__DateOfDeath__c,
&apos;Cancer&apos;, cve__DateOfDiagnosis__c,
&apos;CriticalIllness&apos;, cve__DateOfDiagnosis__c,
&apos;HospitalIndemnity&apos;, cve__HospitalStartDate__c,
&apos;IncomeProtection&apos;, cve__DateOfDisability__c,
&apos;Indemnity&apos;, cve__HospitalStartDate__c,
&apos;LongTermCare&apos;, cve__DateCareStarted__c,
&apos;LongTermDisability&apos;,cve__DateOfDisability__c,
&apos;ShortTermDisability&apos;, cve__DateOfDisability__c,
&apos;Survivor&apos;, cve__DateOfDeath__c,
&apos;TermLife&apos;, cve__DateOfDeath__c,
&apos;TotalAndPermanentDisability&apos;, cve__DateOfDisability__c,
&apos;UniversalLife&apos;, cve__DateOfDeath__c,
&apos;WaiverOfPremium&apos;, cve__DateOfDisability__c,
&apos;Wellness&apos;, cve__DateOfWellnessService__c,
&apos;WholeLife&apos;, cve__DateOfDeath__c,
null
)</formula>
    <inlineHelpText>The date of the event being claimed for e.g. the Date of Disability or the Date of Death.</inlineHelpText>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>