force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Explanation2__c.field-meta.xml
<CustomField>
    <fullName>cve__Explanation2__c</fullName>
    <label>Explanation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>