force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Explanation__c.field-meta.xml
<CustomField>
    <fullName>cve__Explanation__c</fullName>
    <label>Explanation (Deprecated)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>