force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__FeloniousAssaultMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__FeloniousAssaultMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__FeloniousAssaultAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__FeloniousAssaultPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__FeloniousAssaultAmountMaximum__c,  cve__Benefit__r.cve__FeloniousAssaultPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__FeloniousAssaultAmountMaximum__c),
        cve__Benefit__r.cve__FeloniousAssaultAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__FeloniousAssaultPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__FeloniousAssaultPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Felonious Assault Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>