force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__FirstNotified__c.field-meta.xml
<CustomField>
    <fullName>cve__FirstNotified__c</fullName>
    <label>First Notified</label>
    <type>Date</type>
</CustomField>