force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__HasReinsurance__c.field-meta.xml
<CustomField>
    <fullName>cve__HasReinsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Benefit Claimed has Reinsurance or not</description>
    <label>Has Reinsurance</label>
    <type>Checkbox</type>
</CustomField>