force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Hemiplegia__c.field-meta.xml
<CustomField>
    <fullName>cve__Hemiplegia__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Movement of upper and lower limbs of one side of body</inlineHelpText>
    <label>Hemiplegia</label>
    <type>Checkbox</type>
</CustomField>