force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__HospitalEndDate__c.field-meta.xml
<CustomField>
    <fullName>cve__HospitalEndDate__c</fullName>
    <label>Hospital End Date</label>
    <type>Date</type>
</CustomField>