force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__HospitalName__c.field-meta.xml
<CustomField>
    <fullName>cve__HospitalName__c</fullName>
    <label>Hospital Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>