force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__HospitalStartDate__c.field-meta.xml
<CustomField>
    <fullName>cve__HospitalStartDate__c</fullName>
    <label>Hospital Start Date</label>
    <type>Date</type>
</CustomField>