force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__HospitalState__c.field-meta.xml
<CustomField>
    <fullName>cve__HospitalState__c</fullName>
    <label>Hospital State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>