force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__InitialApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>cve__InitialApprovedDate__c</fullName>
    <label>Initial Approved Date</label>
    <type>DateTime</type>
</CustomField>