force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__InitialAssignment__c.field-meta.xml
<CustomField>
    <fullName>cve__InitialAssignment__c</fullName>
    <label>Initial Assignment</label>
    <type>Date</type>
</CustomField>