force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__InitialContributionAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__InitialContributionAmount__c</fullName>
    <label>Initial Contribution Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>