force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__InitialDecision__c.field-meta.xml
<CustomField>
    <fullName>cve__InitialDecision__c</fullName>
    <label>Initial Decision</label>
    <type>Date</type>
</CustomField>