force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__InsuredRelationshipToPolicyholder__c.field-meta.xml
<CustomField>
    <fullName>cve__InsuredRelationshipToPolicyholder__c</fullName>
    <label>Insured Relationship to Policyholder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Domestic Partner</fullName>
            </value>
            <value>
                <fullName>Same Person</fullName>
                <default>true</default>
                <label>Same Person</label>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>