force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LastModified__c.field-meta.xml
<CustomField>
    <fullName>cve__LastModified__c</fullName>
    <description>Excludes fields updated by &quot;Calculate Payments&quot;.</description>
    <label>Last Modified</label>
    <type>DateTime</type>
</CustomField>