force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LastReinstatementApproval__c.field-meta.xml
<CustomField>
    <fullName>cve__LastReinstatementApproval__c</fullName>
    <label>Last Reinstatement Approval</label>
    <type>Date</type>
</CustomField>