force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LastWorked__c.field-meta.xml
<CustomField>
    <fullName>cve__LastWorked__c</fullName>
    <label>Last Worked</label>
    <type>Date</type>
</CustomField>