force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LatestJournal__c.field-meta.xml
<CustomField>
    <fullName>cve__LatestJournal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Journal</label>
    <referenceTo>cve__Journal__c</referenceTo>
    <relationshipLabel>Benefits Claimed</relationshipLabel>
    <relationshipName>BenefitClaimeds</relationshipName>
    <type>Lookup</type>
</CustomField>