force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LatestPaymentSpecification__c.field-meta.xml
<CustomField>
    <fullName>cve__LatestPaymentSpecification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Latest Payment Specification with a Payment Type of &apos;Benefit&apos;. If no Benefit Payment Specification exists then use the latest Payment Specification regardless of Payment Type</inlineHelpText>
    <label>Latest Payment Specification</label>
    <referenceTo>cve__PaymentSpecification__c</referenceTo>
    <relationshipLabel>Benefits Claimed</relationshipLabel>
    <relationshipName>BenefitClaimeds</relationshipName>
    <type>Lookup</type>
</CustomField>