force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LifeChangeEventDate__c.field-meta.xml
<CustomField>
    <fullName>cve__LifeChangeEventDate__c</fullName>
    <label>Life Change Event Date</label>
    <type>Date</type>
</CustomField>