force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LifeChangeEventType__c.field-meta.xml
<CustomField>
    <fullName>cve__LifeChangeEventType__c</fullName>
    <label>Life Change Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Birth of Child</fullName>
            </value>
            <value>
                <fullName>Death of Dependent</fullName>
            </value>
            <value>
                <fullName>Death of Spouse</fullName>
            </value>
            <value>
                <fullName>Divorce</fullName>
            </value>
            <value>
                <fullName>Employment Change</fullName>
            </value>
            <value>
                <fullName>Ineligibility of Dependent</fullName>
            </value>
            <value>
                <fullName>Legal Separation</fullName>
            </value>
            <value>
                <fullName>Marriage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>