force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LifePolicyFaceAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__LifePolicyFaceAmount__c</fullName>
    <label>Life Policy Face Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>