force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LimitationStart__c.field-meta.xml
<CustomField>
    <fullName>cve__LimitationStart__c</fullName>
    <label>Limitation Start</label>
    <type>Date</type>
</CustomField>