force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LimitationType__c.field-meta.xml
<CustomField>
    <fullName>cve__LimitationType__c</fullName>
    <label>Limitation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mental Nervous</fullName>
            </value>
            <value>
                <fullName>Subjective</fullName>
            </value>
            <value>
                <fullName>Drug and Alcohol Abuse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>