force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LocationOfDeath__c.field-meta.xml
<CustomField>
    <fullName>cve__LocationOfDeath__c</fullName>
    <label>Location of Death</label>
    <length>80</length>
    <type>Text</type>
</CustomField>