force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LookbackDaysUsed__c.field-meta.xml
<CustomField>
    <fullName>cve__LookbackDaysUsed__c</fullName>
    <description>Populated when Benefit has a lookback configured</description>
    <inlineHelpText>Number of days of paid payments</inlineHelpText>
    <label>Lookback Days Used</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>