force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LookbackDaysUsedWithoutReduction__c.field-meta.xml
<CustomField>
    <fullName>cve__LookbackDaysUsedWithoutReduction__c</fullName>
    <description>Difference between &apos;Lookback Days Used&apos; and &apos;Lookback Days Used at Reduced Benefit&apos;</description>
    <formula>cve__LookbackDaysUsed__c -  cve__LookbackDaysUsedWithReduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lookback Days Used at Full Benefit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>