force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__LookbackDaysUsedWithReduction__c.field-meta.xml
<CustomField>
    <fullName>cve__LookbackDaysUsedWithReduction__c</fullName>
    <description>Populated when Benefit has a lookback configured</description>
    <inlineHelpText>Subset number of days of paid payments which contained Applied Adjustments based on Benefit Reductions</inlineHelpText>
    <label>Lookback Days Used at Reduced Benefit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>