force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__MannerOfDeath__c.field-meta.xml
<CustomField>
    <fullName>cve__MannerOfDeath__c</fullName>
    <label>Manner of Death</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Suicide</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Homicide</fullName>
            </value>
            <value>
                <fullName>Unknown/Undetermined</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>