force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__MaximumLifeExpectancyUnits__c.field-meta.xml
<CustomField>
    <fullName>cve__MaximumLifeExpectancyUnits__c</fullName>
    <label>Maximum Life Expectancy Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
                <default>true</default>
                <label>Months</label>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>