force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__MedicalCode__c.field-meta.xml
<CustomField>
    <fullName>cve__MedicalCode__c</fullName>
    <label>Medical Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>