force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__MedicalCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>cve__MedicalCodeDescription__c</fullName>
    <label>Medical Code Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>