force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__MedicalCodeType__c.field-meta.xml
<CustomField>
    <fullName>cve__MedicalCodeType__c</fullName>
    <label>Medical Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICD9</fullName>
            </value>
            <value>
                <fullName>ICD10</fullName>
                <default>true</default>
                <label>ICD10</label>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>