force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__MinimumInterestPercentage__c.field-meta.xml
<CustomField>
    <fullName>cve__MinimumInterestPercentage__c</fullName>
    <label>Minimum Interest Percentage</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>