force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__MinimumLifeExpectancyPeriod__c.field-meta.xml
<CustomField>
    <fullName>cve__MinimumLifeExpectancyPeriod__c</fullName>
    <label>Minimum Life Expectancy Period</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>