force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__MonthsOfServiceAtDod__c.field-meta.xml
<CustomField>
    <fullName>cve__MonthsOfServiceAtDod__c</fullName>
    <inlineHelpText>Months of service from 0 to 11; whole years are entered in the &quot;Years of Service at DOD&quot; field</inlineHelpText>
    <label>Months of Service at Date of Disability</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>