force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__OneFootLoss__c.field-meta.xml
<CustomField>
    <fullName>cve__OneFootLoss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Foot</label>
    <type>Checkbox</type>
</CustomField>