force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__OneHandAndOneFoot__c.field-meta.xml
<CustomField>
    <fullName>cve__OneHandAndOneFoot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Hand and One Foot</label>
    <type>Checkbox</type>
</CustomField>