force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__OneHandLoss__c.field-meta.xml
<CustomField>
    <fullName>cve__OneHandLoss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Hand</label>
    <type>Checkbox</type>
</CustomField>