force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__OverpaymentBalance__c.field-meta.xml
<CustomField>
    <fullName>cve__OverpaymentBalance__c</fullName>
    <inlineHelpText>Before tax amount overpaid or underpaid for all paid payments that have been calculated or manually added.</inlineHelpText>
    <label>Overpayment Balance Before Taxes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>