force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__OverpaymentBalanceAsOf__c.field-meta.xml
<CustomField>
    <fullName>cve__OverpaymentBalanceAsOf__c</fullName>
    <label>Overpayment Balance as of</label>
    <type>Date</type>
</CustomField>