force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__OverpaymentBalanceNet__c.field-meta.xml
<CustomField>
    <fullName>cve__OverpaymentBalanceNet__c</fullName>
    <inlineHelpText>Net amount overpaid or underpaid for all paid payments that have been calculated or manually added.</inlineHelpText>
    <label>Overpayment Balance Net</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>