force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__OverpaymentBeforeTax__c.field-meta.xml
<CustomField>
    <fullName>cve__OverpaymentBeforeTax__c</fullName>
    <label>Overpayment Before Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>